[package]
name = "localserver"
version = "0.1.0"
authors = ["arthrp"]
license = "GPL-3.0-only"
description = "Local server serving specified folder"
edition = "2018"
homepage = "https://github.com/arthrp/localserver"
repository = "https://github.com/arthrp/localserver"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"